# CS_450_Computer-Graphics_trescoj

./: .gitignore  CMakeLists.txt
shaders/Assign05/: Basic.vs
shaders/Assign06/: Basic.fs  Basic.vs
shaders/BasicOpenGL/: Basic.fs  Basic.vs
shaders/ProfExercises03/: Basic.vs
shaders/ProfExercises07/: Basic.fs  Basic.vs
shaders/ProfExercisesMath/: Basic.fs  Basic.vs
src/app/: Assign01.cpp  Assign02.cpp  Assign03.cpp  Assign04.cpp  Assign05.cpp  Assign06.cpp  BasicOpenGL.cpp  Exercises03.cpp  ProfExercises03.cpp  ProfExercises07.cpp  ProfExercisesMath.cpp
src/include/: MeshData.hpp
src/lib/: MeshGLData.cpp
